Alterações de filmes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="france.jpg" alt="France (2021)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>France - Sob os holofotes(2021)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -42,17 +42,17 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Jornalista que precisa lidar diariamente com as disputas profissionais e a conturbada vida familiar, France de Meurs tem seu mundo virado do avesso depois de ferir acidentalmente um pedestre durante um acidente de trânsito.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="a_casa_dos_espiritos.jpeg" alt="A casa dos espíritos (1994)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>A casa dos espíritos (1994)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -66,17 +66,17 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>A história do Chile da década de 20 aos anos 70 é contada através da saga da família Trueba, que começa com a união de um homem simples (Jeremy Irons), que fica rico, com uma jovem (Meryl Streep) de poderes paranormais. A saga se desenvolve até esta família ser atingida pela revolução, que no início da década de 70 derrubou o presidente Salvador Allende.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="o_conto_de_aia.jpg" alt="The handmaid's tale - A Decadência de uma espécie (1990)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>The handmaid's tale - A Decadência de uma espécie (1990)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply Lar dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>A República de Gileade é um estado totalitário que tenta usar a Bíblia para fundamentar seus atos. Qualquer mulher que comete um delito (homossexualidade está entre eles) é enviada para colônias penais, a não ser que seja fértil. Neste caso, se torna uma "aia", sendo obrigada a ter relações sexuais com quem o governo determina. Kate foi presa por tentar atravessar a fronteira, seu marido foi morto e ela nunca mais viu a filha. Ela é designada para ser a aia do Comandante, supremo chefe militar da República. Ao mesmo tempo, um movimento de resistência começa a desafiar o regime.</span>
         </div>
       </div>
     </div>
