--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="france.jpg" alt="France (2021)"/>
+            <img src="images/france.jpg" alt="France (2021)"/>
           </div>
           <div class="movie-text">
             <h4>France - Sob os holofotes(2021)</h4>
@@ -49,7 +49,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="a_casa_dos_espiritos.jpeg" alt="A casa dos espíritos (1994)"/>
+            <img src="images/a_casa_dos_espiritos.jpeg" alt="A casa dos espíritos (1994)"/>
           </div>
           <div class="movie-text">
             <h4>A casa dos espíritos (1994)</h4>
@@ -73,7 +73,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="o_conto_de_aia.jpg" alt="The handmaid's tale - A Decadência de uma espécie (1990)"/>
+            <img src="images/o_conto_de_aia.jpg" alt="The handmaid's tale - A Decadência de uma espécie (1990)"/>
           </div>
           <div class="movie-text">
             <h4>The handmaid's tale - A Decadência de uma espécie (1990)</h4>
