--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="images/france.jpg" alt="France (2021)"/>
+            <img src="france.jpg" alt="France (2021)"/>
           </div>
           <div class="movie-text">
             <h4>France - Sob os holofotes(2021)</h4>
@@ -49,7 +49,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="images/a_casa_dos_espiritos.jpeg" alt="A casa dos espíritos (1994)"/>
+            <img src="a_casa_dos_espiritos.jpeg" alt="A casa dos espíritos (1994)"/>
           </div>
           <div class="movie-text">
             <h4>A casa dos espíritos (1994)</h4>
@@ -73,7 +73,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="images/o_conto_de_aia.jpg" alt="The handmaid's tale - A Decadência de uma espécie (1990)"/>
+            <img src="o_conto_de_aia.jpg" alt="The handmaid's tale - A Decadência de uma espécie (1990)"/>
           </div>
           <div class="movie-text">
             <h4>The handmaid's tale - A Decadência de uma espécie (1990)</h4>
@@ -88,7 +88,7 @@
               </div>
             </div>
           </div>
-        </div
+        </div>
         <div class="movie-description">
           <span>A República de Gileade é um estado totalitário que tenta usar a Bíblia para fundamentar seus atos. Qualquer mulher que comete um delito (homossexualidade está entre eles) é enviada para colônias penais, a não ser que seja fértil. Neste caso, se torna uma "aia", sendo obrigada a ter relações sexuais com quem o governo determina. Kate foi presa por tentar atravessar a fronteira, seu marido foi morto e ela nunca mais viu a filha. Ela é designada para ser a aia do Comandante, supremo chefe militar da República. Ao mesmo tempo, um movimento de resistência começa a desafiar o regime.</span>
         </div>
