--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>A República de Gileade é um estado totalitário que tenta usar a Bíblia para fundamentar seus atos. Qualquer mulher que comete um delito (homossexualidade está entre eles) é enviada para colônias penais, a não ser que seja fértil. Neste caso, se torna uma "aia", sendo obrigada a ter relações sexuais com quem o governo determina. Kate foi presa por tentar atravessar a fronteira, seu marido foi morto e ela nunca mais viu a filha. Ela é designada para ser a aia do Comandante, supremo chefe militar da República. Ao mesmo tempo, um movimento de resistência começa a desafiar o regime.</span>
+          <span>A República de Gileade é um estado totalitário que tenta usar a Bíblia para fundamentar seus atos. Mulheres que cometem delitos (homossexualidade está entre eles) são enviadas para colônias penais, a não ser que sejam férteis. Neste caso, se tornam "aia", sendo obrigada a ter relações sexuais com quem o governo determina. Kate foi presa por tentar atravessar a fronteira, seu marido foi morto e ela nunca mais viu a filha. Ela é designada para ser a aia do Comandante, supremo chefe militar da República. Ao mesmo tempo, um movimento de resistência começa a desafiar o regime.</span>
         </div>
       </div>
     </div>
